// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar.* /> <ProgressBar.Basic /> should render correctly with all required props 1`] = `
<div
  className="ProgressBar-root-0-1-1"
>
  <div
    className="ProgressBar-label-0-1-5"
  >
    100 / 1000
  </div>
  <div
    className="ProgressBar-bar-0-1-2"
  >
    <div
      className="ProgressBar-filler-0-1-3"
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar.* /> <ProgressBar.Percentage /> should render correctly with all required props 1`] = `
<div
  className="ProgressBar-root-0-1-1"
>
  <div
    className="ProgressBar-label-0-1-5"
  >
    100 / 1000
  </div>
  <div
    className="ProgressBar-bar-0-1-2"
  >
    <div
      className="ProgressBar-filler-0-1-3"
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
  <div
    className="ProgressBar-percentageValue-0-1-4"
  >
    10
    %
  </div>
</div>
`;
